--- a/templates/zuser/base.html
+++ b/templates/zuser/base.html
@@ -44,7 +44,11 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-                {% block side_block %}{% endblock %}
+                {% block side %}
+                    <br/>
+                    <a href="/zuser/login/"><h4>LOGIN</h4></a>
+                    <a href="/zuser/register/"><h4>REGISTER</h4></a>
+                {% endblock %}
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
