--- a/templates/zuser/index.html
+++ b/templates/zuser/index.html
@@ -10,6 +10,10 @@
     {% if user.is_authenticated %}
         <a href="/zuser/restricted/">Restricted Page</a>
         <br/>
+        <a href="/zasset">Asset</a>
+        <br/>
+        <a href="/zstaff">Staff</a>
+        <br/>
         <a href="/zuser/logout/">Logout</a>
         <br/>
     {% else %}
