--- a/templates/zasset/department.html
+++ b/templates/zasset/department.html
@@ -4,6 +4,12 @@
 
 {% block title %}ZOS Department{% endblock %}
 
+{% block side %}
+    <br/>
+    <a href="/admin/zasset/department/add"><h4>ADD</h4></a>
+    <a href="/admin/zasset/department"><h4>MODIFY</h4></a>
+{% endblock %}
+
 {% block body %}
 
     <h1>DEPARTMENT MANAGEMENT</h1>
