--- a/templates/zasset/hardware.html
+++ b/templates/zasset/hardware.html
@@ -4,6 +4,12 @@
 
 {% block title %}ZOS Asset{% endblock %}
 
+{% block side %}
+    <br/>
+    <a href="/admin/zasset/hardware/add"><h4>ADD</h4></a>
+    <a href="/admin/zasset/hardware/"><h4>MODIFY</h4></a>
+{% endblock %}
+
 {% block body %}
 
     <h1>HARDWARE MANAGEMENT</h1>
