--- a/templates/zuser/index.html
+++ b/templates/zuser/index.html
@@ -9,7 +9,7 @@
 
     {% if user.is_authenticated %}
         <br/>
-        <h4><a href="/zuser/restricted/">Restricted Page</a></h4>
+        <h4><a href="/admin">Management</a></h4>
 
         <h4><a href="/zasset">Asset</a></h4>
 
