--- a/templates/zasset/staff.html
+++ b/templates/zasset/staff.html
@@ -4,6 +4,12 @@
 
 {% block title %}ZOS Staff{% endblock %}
 
+{% block side %}
+    <br/>
+    <a href="/admin/zasset/staff/add"><h4>ADD</h4></a>
+    <a href="/admin/zasset/staff/"><h4>MODIFY</h4></a>
+{% endblock %}
+
 {% block body %}
 
     <h1>STAFF MANAGEMENT</h1>
