--- a/templates/zasset/assetindex.html
+++ b/templates/zasset/assetindex.html
@@ -2,6 +2,12 @@
 
 {% block title %}ZOS Asset{% endblock %}
 
+{% block side %}
+    <br/>
+    <a href="/zasset/staffindex"><h4>STAFF</h4></a>
+    <a href="/zmoc"><h4>MOC</h4></a>
+{% endblock %}
+
 {% block body %}
 
     <h1>Asset of ZOS</h1>
