--- a/templates/zasset/hardware.html
+++ b/templates/zasset/hardware.html
@@ -40,7 +40,7 @@
                 <td>&nbsp;&nbsp;-&nbsp;&nbsp;</td>
                 <td>{{ hardware.ostype }}</td>
                 <td>&nbsp;&nbsp;-&nbsp;&nbsp;</td>
-                <td>{{ hardware.ram }}</td>
+                <td align="right">{{ hardware.ram }}</td>
                 <td>&nbsp;&nbsp;-&nbsp;&nbsp;</td>
                 <td>{{ hardware.function }}</td>
                 <td>&nbsp;&nbsp;-&nbsp;&nbsp;</td>
