--- a/templates/zasset/staffindex.html
+++ b/templates/zasset/staffindex.html
@@ -2,6 +2,12 @@
 
 {% block title %}ZOS Staff{% endblock %}
 
+{% block side %}
+    <br/>
+    <a href="/zasset"><h4>ASSET</h4></a>
+    <a href="/zmoc"><h4>MOC</h4></a>
+{% endblock %}
+
 {% block body %}
 
     <h1>ZOS - STAFF</h1>
