--- a/templates/zuser/index.html
+++ b/templates/zuser/index.html
@@ -11,6 +11,8 @@
         <br/>
         <h4><a href="/admin">Management</a></h4>
 
+        <h4><a href="/zmoc">Moc</a></h4>
+
         <h4><a href="/zasset">Asset</a></h4>
 
         <h4><a href="/zasset/staffindex">Staff</a></h4>
