--- a/templates/zuser/base.html
+++ b/templates/zuser/base.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/zuser/">Zuser</a>
+          <a class="navbar-brand" href="/zuser/">ZHIDAO</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
